methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:16: error: Unmatched closing brace '}' ignored here
}
^